--- a/engine/server/scripts/_constants.env
+++ b/engine/server/scripts/_constants.env
@@ -4,4 +4,4 @@
 IMAGE_ORG_AND_REPO="kurtosistech/kurtosis-engine-server"
 # ^^^^^^^^^^^^^^^^ WARNING ^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-GET_DOCKER_IMAGE_TAG_SCRIPT_FILENAME="get-docker-image-tag.sh"
+GET_DOCKER_IMAGE_TAG_CMD="kudet get-docker-tag"
