--- a/cli/.circleci/config.yml
+++ b/cli/.circleci/config.yml
@@ -50,6 +50,11 @@ jobs:
       - image: "goreleaser/goreleaser:<< pipeline.parameters.goreleaser-version >>"
     resource_class: large
     steps:
+      # Install Kudet
+      - run: |
+          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+          sudo apt update
+          sudo apt install kudet
       - checkout
       # The 'git config' and 'go env' steps are to allow Go to read modules from our private Github repos
       # The KURTOSISBOT_GITHUB_TOKEN is a secret provided at CI build time
@@ -330,9 +335,15 @@ jobs:
 
   # -- Artifact-publishing jobs --------------------------------
   push_cli_artifacts:
+
     docker:
       - image: "goreleaser/goreleaser:<< pipeline.parameters.goreleaser-version >>"
     steps:
+      # Install Kudet
+      - run: |
+          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+          sudo apt update
+          sudo apt install kudet
       - checkout
       # The 'git config' and 'go env' steps are to allow Go to read modules from our private Github repos
       # The KURTOSISBOT_GITHUB_TOKEN is a secret provided at CI build time
