--- a/cli/.circleci/config.yml
+++ b/cli/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
     steps:
       # Install Kudet
       - run: |
+          apk install apt-get
           apt-get update && apt-get -y install sudo
           echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
           sudo apt update
