--- a/cli/.circleci/config.yml
+++ b/cli/.circleci/config.yml
@@ -18,7 +18,7 @@ parameters:
     default: 2021.11-20.04
   goreleaser-version:
     type: string
-    default: "v1.9.1"
+    default: "v1.18.3"
   # The dirpath in jobs that use the built CLI binary where the workspace containing the CLI binary will be attached
   workspace-with-cli-binary-mountpoint:
     type: string
@@ -47,13 +47,11 @@ jobs:
   # -- Build jobs ------------------------------------------
   build_cli:
     docker:
-      - image: "goreleaser/goreleaser:<< pipeline.parameters.goreleaser-version >>"
+      - image: "goreleaser/goreleaser-cross:<< pipeline.parameters.goreleaser-version >>"
     resource_class: large
     steps:
       # Install Kudet
       - run: |
-          apk add apt-get
-          apt-get update && apt-get -y install sudo
           echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
           sudo apt update
           sudo apt install kudet
