--- a/cli/.circleci/config.yml
+++ b/cli/.circleci/config.yml
@@ -13,9 +13,9 @@ parameters:
   docker-engine-version:
     type: string
     default: 20.10.7
-  cimg-base-version:
+  go-version:
     type: string
-    default: 2021.11-20.04
+    default: "1.17"
   # The dirpath in jobs that use the built CLI binary where the workspace containing the CLI binary will be attached
   workspace-with-cli-binary-mountpoint:
     type: string
@@ -44,7 +44,7 @@ jobs:
   # -- Build jobs ------------------------------------------
   build_cli:
     docker:
-      - image: "cimg/base:<< pipeline.parameters.cimg-base-version >>"
+      - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
     resource_class: large
     steps:
       # Install goreleaser
@@ -338,7 +338,7 @@ jobs:
   # -- Artifact-publishing jobs --------------------------------
   push_cli_artifacts:
     docker:
-      - image: "cimg/base:<< pipeline.parameters.cimg-base-version >>"
+      - image: "cimg/go:<< pipeline.parameters.server-go-version >>"
     steps:
       # Install goreleaser
       - run: |
@@ -347,7 +347,6 @@ jobs:
           sudo apt install goreleaser
       # Install Kudet
       - run: |
-          apt-get update && apt-get -y install sudo
           echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
           sudo apt update
           sudo apt install kudet
