--- a/engine/.circleci/config.yml
+++ b/engine/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       # If the only changes are to the docs, don't run the slow (and expensive) code checks
       # `git diff --exit-code` returns 0 exit code if no changes, and 1 if changes
       - run: |
-          if git --no-pager diff --exit-code origin/develop...HEAD -- . ':!docs'; then
+          if git --no-pager diff --exit-code origin/master...HEAD -- . ':!docs'; then
             circleci-agent step halt
           fi
 
@@ -58,7 +58,7 @@ jobs:
       # If the only changes are to the docs, don't run the slow (and expensive) code checks
       # `git diff --exit-code` returns 0 exit code if no changes, and 1 if changes
       - run: |
-          if git --no-pager diff --exit-code origin/develop...HEAD -- . ':!docs'; then
+          if git --no-pager diff --exit-code origin/master...HEAD -- . ':!docs'; then
             circleci-agent step halt
           fi
 
@@ -73,7 +73,7 @@ jobs:
       # If the only changes are to the docs, don't run the slow (and expensive) code checks
       # `git diff --exit-code` returns 0 exit code if no changes, and 1 if changes
       - run: |
-          if git --no-pager diff --exit-code origin/develop...HEAD -- . ':!docs'; then
+          if git --no-pager diff --exit-code origin/master...HEAD -- . ':!docs'; then
             circleci-agent step halt
           fi
 
@@ -99,7 +99,7 @@ jobs:
       # If the only changes are to the docs, don't run the slow (and expensive) code checks
       # `git diff --exit-code` returns 0 exit code if no changes, and 1 if changes
       - run: |
-          if git --no-pager diff --exit-code origin/develop...HEAD -- . ':!docs'; then
+          if git --no-pager diff --exit-code origin/master...HEAD -- . ':!docs'; then
             circleci-agent step halt
           fi
 
@@ -227,7 +227,6 @@ workflows:
           filters:
             branches:
               ignore:
-                - develop
                 - master
       - check_api_golang:
           # NOTE: Do NOT add our private Github user here; the API must be publicly-accessible so must build without them
@@ -235,13 +234,11 @@ workflows:
           filters:
             branches:
               ignore:
-                - develop
                 - master
       - check_api_typescript:
           filters:
             branches:
               ignore:
-                - develop
                 - master
       - check_launcher:
           context:
@@ -250,7 +247,6 @@ workflows:
           filters:
             branches:
               ignore:
-                - develop
                 - master
       - check_server_code:
           context:
@@ -260,7 +256,6 @@ workflows:
           filters:
             branches:
               ignore:
-                - develop
                 - master
       # -- End PR check jobs ---------------------------------------
 
