Fixed a bug with the way release names were getting generated in kurtosis-cli-release-artifacts

--- a/cli/cli/.goreleaser.yml
+++ b/cli/cli/.goreleaser.yml
@@ -61,6 +61,8 @@ release:
     owner: kurtosis-tech
     name: kurtosis-cli-release-artifacts
 
+  name_template: "{{ .Version }}"
+
   # NOTE: these are the archive IDs, not the build/binary IDs
   ids:
     - cli
