remove trailing comma

--- a/core/.circleci/config.yml
+++ b/core/.circleci/config.yml
@@ -279,7 +279,7 @@ workflows:
                 ],
                 "ignorePatterns": [
                     {
-                        "pattern": "https://github.com/kurtosis-tech/kurtosis-internal-docs/.*",
+                        "pattern": "https://github.com/kurtosis-tech/kurtosis-internal-docs/.*"
                     }
                 ]
             }
