--- a/cli/internal_testsuites/typescript/package.json
+++ b/cli/internal_testsuites/typescript/package.json
@@ -11,8 +11,8 @@
     "example-api-server-api-lib": "^0.3.4",
     "example-datastore-server-api-lib": "^0.4.4",
     "jest": "^27.3.1",
-    "kurtosis-core-api-lib": "1.58.3",
-    "kurtosis-engine-api-lib": "1.32.2",
+    "kurtosis-core-api-lib": "../../../kurtosis-core/api/typescript",
+    "kurtosis-engine-api-lib": "../../../kurtosis-engine-server/api/typescript",
     "loglevel": "^1.8.0",
     "neverthrow": "^4.3.1",
     "ts-jest": "^28.0.8",
