--- a/cli/internal_testsuites/typescript/tsconfig.json
+++ b/cli/internal_testsuites/typescript/tsconfig.json
@@ -4,8 +4,7 @@
         "outDir": "build",
         "downlevelIteration": true,
         "declaration": true,
-        "strict": true,
-        "target": "ES2015"
+        "strict": true
     },
     "include": [
         "src/**/*"
