--- a/cli/.github/workflows/release.yml
+++ b/cli/.github/workflows/release.yml
@@ -5,13 +5,39 @@ on:
   workflow_dispatch:
     inputs:
       bump_major:
-        description: 'Do you want to bump the MAJOR version ("X" in "X.Y.Z") on this release?'
+        description: 'Bump the MAJOR version ("X" in "X.Y.Z") on this release'
+        required: true
+        type: boolean
+      should_do_weekend_release:
+        description: '(DANGER) Override weekend release protection and do a risky release'
         required: true
         type: boolean
 
 jobs:
   release:
-    uses: kurtosis-tech/release/.github/workflows/release.yml@master
-    with:
-      bump_major: ${{ inputs.bump_major }}
-    secrets: inherit
+    steps:
+      - name: Verify release is allowed (weekend releases are only allowed when weekend release override is set)
+        run: |
+          set -euo pipefail
+
+          FRIDAY_ORDINAL=5
+          SATURDAY_ORDINAL=6
+          SUNDAY_ORDINAL=7
+
+          # TODO DEBUGGIN
+          echo ${{ inputs.should_do_weekend_release }}
+
+          is_weekend_release="false"
+          day_of_week_ordinal="$(date +%u)"
+          if [ "${day_of_week_ordinal}" -eq "${FRIDAY_ORDINAL}" ] || [ "${day_of_week_ordinal}" -eq "${SATURDAY_ORDINAL}" ] || [ "${day_of_week_ordinal}" -eq "${SUNDAY_ORDINAL}" ]; then
+            is_weekend_release="true"
+          fi
+
+          if "${is_weekend_release}" && ! ${{ inputs.should_do_weekend_release }}; then
+            echo "Refusing to release on Friday, Saturday, or Sunday to avoid risk of Kurtosians needing to fix bugs on the weekend"
+            exit 1
+          fi
+##- uses: kurtosis-tech/release/.github/workflows/release.yml@master
+##  with:
+##    bump_major: ${{ inputs.bump_major }}
+##  secrets: inherit
