--- a/cli/.github/workflows/release.yml
+++ b/cli/.github/workflows/release.yml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   release:
+    runs-on: ubuntu-latest
     steps:
       - name: Verify release is allowed (weekend releases are only allowed when weekend release override is set)
         run: |
