--- a/cli/.circleci/config.yml
+++ b/cli/.circleci/config.yml
@@ -28,7 +28,7 @@ steps_prepare_testing_k8s: &steps_prepare_testing_k8s
         command: |
           minikube status
     - run: "${KURTOSIS_BINPATH} cluster set minikube"
-    - run: "${KURTOSIS_BINPATH} engine start"
+    - run: "${KURTOSIS_BINPATH} engine start --cli-log-level trace"
     - run:
         command: "${KURTOSIS_BINPATH} gateway"
         background: true
@@ -152,7 +152,7 @@ jobs:
           condition:
             equal: [ "minikube", << parameters.cli-cluster-backend >> ]
           <<: *steps_prepare_testing_k8s
-      - run: "${KURTOSIS_BINPATH} engine start"
+      - run: "${KURTOSIS_BINPATH} engine start --cli-log-level trace"
 
       # Run the testsuite for kubernetes and docker, but don't fail the job immediately so that we can upload the enclave dump
       - when:
@@ -205,7 +205,7 @@ jobs:
           condition:
             equal: [ "minikube", << parameters.cli-cluster-backend >> ]
           <<: *steps_prepare_testing_k8s
-      - run: "${KURTOSIS_BINPATH} engine start"
+      - run: "${KURTOSIS_BINPATH} engine start --cli-log-level trace"
 
       # Run the testsuite for either docker or kubernetes, but don't fail the job immediately so that we can upload the enclave dump
       - when:
@@ -398,7 +398,7 @@ jobs:
           echo 'export KURTOSIS_BINPATH="<< pipeline.parameters.workspace-with-cli-binary-mountpoint >>/<< pipeline.parameters.cli-dist-home-relative-dirpath >>/<< pipeline.parameters.cli-linux-amd-64-binary-relative-filepath >>"' >> "${BASH_ENV}"
       - run: |
           function test_config_init_is_required() {
-            if ${KURTOSIS_BINPATH} engine start; then
+            if ${KURTOSIS_BINPATH} engine start --cli-log-level trace; then
               echo "Error: Expected an attempt to use the Kurtosis CLI in a non-interactive terminal without init'ing the config first to fail but it succeeded" >&2
               return 1
             fi
