--- a/engine/server/Dockerfile
+++ b/engine/server/Dockerfile
@@ -1,9 +1,9 @@
-FROM  alpine:latest
+FROM  alpine:3.16.2
 
 RUN apk update && apk add bash
 
 WORKDIR /run
 
-COPY ./build/kurtosis-engine ./run-engine.sh ./
+COPY ./build/kurtosis-engine ./
 
-CMD bash ./run-engine.sh
+CMD ./kurtosis-engine
